duniverse/menhirLib.20200211/test/static/bad/error-reserved.mly
%start<int> a
%%

a: {}

error: {}
