duniverse/menhirLib.20200211/test/static/bad/error-reserved.exp
File "error-reserved.mly", line 6, characters 0-5:
Error: error is reserved and thus cannot be used as a non-terminal symbol.
